Feed, Item, Comment styling and apply service from node-hnapi

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-Hello1
+ <div class="wrap">
+    <app-header></app-header>
+    <div class="container inner-wrapper">
+        <div class="container" id="main-content">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+    <app-footer></app-footer>
+</div>
