--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,59 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,body {
+    height: 100%;
+}
+body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    background: #f6f6f6;
+}
+.submit {
+    background: transparent;
+    border: 1px solid #f4511e;
+    line-height: 36px;
+    padding: 0 30px;
+    border-radius: 5px;
+    color: #f4511e;
+    letter-spacing: 0.3px;
+    font-weight: 500;
+}
+input {
+    outline: none;
+}
+p {
+    margin: 0
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0
+}
+h2 {
+    font-size: 18px;
+    margin: 0;
+    line-height: 38px;
+    text-transform: capitalize;
+    font-weight: 400;
+}
+.container {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+a {
+    /*color: #bdbdbd;*/
+    color: #337ab7;
+    text-decoration: none;
+    cursor: pointer;
+}
+pre {
+    margin: 10px 0
+}
+a:hover,
+a.active {
+    text-decoration: none;
+    color: #232323;
+    font-weight: 500;
+}
