--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -6,7 +6,7 @@
             </a>
         </h1>
         <ul class="navigation">
-            <li *ngFor="let nav of navigation"><a routerLink="{{nav.url}}/1" routerLinkActive="active">{{nav.name}}</a></li>
+            <li *ngFor="let nav of navigation"><a routerLink="{{nav.url}}" routerLinkActive="active">{{nav.name}}</a></li>
             <li>
                 <input type="search" class="header-search">
             </li>
