--- a/src/app/hn/feed/feed.component.sass
+++ b/src/app/hn/feed/feed.component.sass
@@ -55,7 +55,7 @@
                                 font-weight: 500
                                 color: #f4511e
                 .item-tag
-                    overflow: hidden
+                    // overflow: hidden
                     .point
                         text-align: center
                         font-size: 16px
@@ -63,6 +63,7 @@
                         color: #f4511e
                         padding: 3px 0
                         float: left
+                        margin-left: 15px
                         span
                             font-size: 13px
                             font-weight: normal
@@ -71,11 +72,39 @@
                             color: #f4511e
                     .share-icon
                         float: left
-                        line-height: 46px
-                        margin-right: 30px
+                        line-height: 50px
+                        padding: 0 15px
                         color: #b1b1b1
+                        position: relative
+                        &:hover
+                            .social-share
+                                display: flex
                         i:hover
                             color: #f4511e
+                        .fa-facebook:hover
+                            color: #3b5998
+                        .fa-linkedin:hover
+                            color: #007bb6
+                        .fa-google-plus:hover
+                            color: #d34836
+                        .social-share
+                            position: absolute
+                            display: none
+                            background: #fff
+                            border: 1px solid #e8e8e8
+                            padding: 0 1rem
+                            left: -80px
+                            bottom: -34px
+                            border-radius: 5px
+                            li
+                                padding: 0 10px
+                                p
+                                    line-height: 35px
+                                &:first-child
+                                    p
+                                        color: #f4511e
+                                        font-weight: 500
+
                     .comment
                         float: left
                         display: block
@@ -86,7 +115,7 @@
                         font-weight: bold
                         position: relative
                         top: 13px
-                        margin-right: 30px
+                        margin-right: 15px
                         font-size: 13px
                         font-weight: 500
                         letter-spacing: 0.5px
