--- a/src/app/hn/feed/feed.component.sass
+++ b/src/app/hn/feed/feed.component.sass
@@ -1,6 +1,6 @@
 .wrap-feed    
     padding: 20px 30px
-    margin: 20px 0
+    margin: 20px 0 50px
     background: #fff
     transition: all .5s cubic-bezier(.55,0,.1,1)
     .top-content
