--- a/src/app/hn/user/user.component.sass
+++ b/src/app/hn/user/user.component.sass
@@ -42,3 +42,6 @@
         border-bottom: 1px solid #eee
         margin-bottom: 20px
         font-weight: 400
+@media (max-width: 600px)
+    .item
+        margin: 10px 0
