--- a/src/app/core/header/header.component.sass
+++ b/src/app/core/header/header.component.sass
@@ -3,16 +3,22 @@ header
     -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.05)
     -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.05)
     box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.05)
-    #header
+    width: 100%
+    height: 70px
+    position: fixed
+    top: 0
+    left: 0
+    z-index: 10
+    .container
         display: flex
         padding: 20px 0
         h1
             margin: 0
-            width: 40px
-            height: 40px
+            width: 30px
+            height: 30px
             a
                 img
-                    width: 40px
+                    width: 30px
                     vertical-align: top
         ul
             flex: 1
@@ -25,7 +31,7 @@ header
             margin-bottom: 0
             li
                 float: left
-                line-height: 40px
+                line-height: 30px
                 padding: 0 16px
                 a
                     color: #bdbdbd
@@ -54,3 +60,16 @@ header
             text-align: right
         h2
             line-height: 40px
+@media (max-width: 860px)
+    header
+        .container
+            padding: 20px 30px
+@media (max-width: 600px)
+    header
+        height: 60px
+        .container
+            padding: 15px
+            .navigation
+                margin-left: 20px
+                li
+                    padding: 0 10px 
