--- a/src/app/hn/item/item.component.sass
+++ b/src/app/hn/item/item.component.sass
@@ -42,3 +42,8 @@
         border-bottom: 1px solid #eee
         margin-bottom: 20px
         font-weight: 400
+@media (max-width: 600px)
+    .item
+        margin: 0
+    .comments
+        margin: 10px 0 50px
