--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     background: #f6f6f6;
+    padding-top: 70px;
 }
 .submit {
     background: transparent;
@@ -40,6 +41,7 @@ h2 {
 .container {
     padding-left: 0;
     padding-right: 0;
+    max-width: 960px
 }
 
 a {
