--- a/src/app/hn/feed/feed.component.sass
+++ b/src/app/hn/feed/feed.component.sass
@@ -45,6 +45,8 @@
                             font-weight: normal
                             color: #999
                             letter-spacing: 0.3px
+                            .point-mobile
+                                display: none
                     .info
                         font-size: 13px
                         color: #b1b1b1
@@ -158,10 +160,19 @@
                         .title
                             a
                                 font-size: 14px
+                            .url-info
+                                margin-top: 5px
+                                display: block
+                                .point-mobile
+                                    display: inline-block
+                                    i
+                                        font-weight: 500
+                                        font-style: normal
                         .info
                             letter-spacing: 0
                             p
                                 font-size: 12px
+                                margin-top: 5px
                                 .submitted-info
                                     font-weight: 400
                                 .comment.mobile
