--- a/src/app/hn/user/user.component.sass
+++ b/src/app/hn/user/user.component.sass
@@ -30,7 +30,7 @@
             font-size: 14px
             font-weight: normal
             color: #b1b1b1
-.comments
+.about
     padding: 20px 30px
     margin: 20px 0
     background: #fff
@@ -44,4 +44,16 @@
         font-weight: 400
 @media (max-width: 600px)
     .item
+        margin: 0
+        padding: 20px
+        h2
+            font-size: 16px
+            line-height: 26px
+        .info
+            p
+                font-size: 13px
+        .point
+            font-size: 17px
+    .about
+        padding: 20px
         margin: 10px 0
