--- a/src/app/hn/item/comment/comment.component.sass
+++ b/src/app/hn/item/comment/comment.component.sass
@@ -11,7 +11,6 @@
             text-decoration: none
     .time
         padding-left: 5px
-        font-size: 14px
         color: #b1b1b1
         font-weight: 400
     .toggle
@@ -31,3 +30,7 @@
         margin-left: 0
         padding: 0
         list-style-type: none
+@media (max-width: 600px)
+    .comment-tree 
+        .comment-text    
+            font-size: 14px
