--- a/src/app/hn/item/item.component.sass
+++ b/src/app/hn/item/item.component.sass
@@ -44,6 +44,20 @@
         font-weight: 400
 @media (max-width: 600px)
     .item
-        margin: 0
+        padding: 20px
+        margin: 0 
+        .right-info
+            display: none
+        .left-info
+            h2
+                font-size: 16px
+                line-height: 26px
+            .info
+                p
+                    font-size: 13px
     .comments
+        padding: 20px
         margin: 10px 0 50px
+        h3
+            font-size: 15px
+   
