responsive comment component

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -7,3 +7,8 @@
         display: table-row
         height: 100%
         #main-content
+@media (max-width: 600px)
+    .inner-wrapper
+        position: absolute
+        width: 100%
+        overflow-wrap: break-word
