--- a/src/app/hn/feed/feed.component.html
+++ b/src/app/hn/feed/feed.component.html
@@ -21,7 +21,7 @@
             <a href="{{item.url}}">{{item.title}}</a>
             <span class="url-info">
               <span class="point-mobile"><i>{{item.points ? item.points : 1}}</i> {{item.points > 1 ? "points" :"point"}}</span>
-              <span>({{(item.domain)}})</span>
+              <span *ngIf="item.domain">({{item.domain}})</span>
             </span>
           </p>
           <div class="info">
