--- a/src/app/hn/item/comment/comment.component.sass
+++ b/src/app/hn/item/comment/comment.component.sass
@@ -31,6 +31,7 @@
         padding: 0
         list-style-type: none
 @media (max-width: 600px)
-    .comment-tree 
+    .comment-tree
+        margin-left: 8px
         .comment-text    
-            font-size: 14px
+            font-size: 13.5px
