--- a/src/app/hn/item/item.component.sass
+++ b/src/app/hn/item/item.component.sass
@@ -52,6 +52,7 @@
             h2
                 font-size: 16px
                 line-height: 26px
+                font-weight: 500
             .info
                 p
                     font-size: 13px
